--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter dot"
   },
   "dependencies": {
-    "esprima-fb": "~8001.1001.0-dev-harmony-fb",
-    "recast": "~0.9.6"
+    "esprima-fb": "*",
+    "recast": "0"
   },
   "devDependencies": {
     "istanbul": "^0.3.2",
